<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <TextView android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_add_book"
        android:textColor="@color/msg_no_books"
        android:textSize="@dimen/lbl_new_book_title"
        android:textStyle="normal" />

    <TextView android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_book_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_book_title"
        android:layout_marginTop="20dp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/book_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_enter_book_title"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_book"
        android:textSize="@dimen/input_new_book" />

    <TextView android:id="@+id/book_author_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_book_author"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_book_title"
        android:layout_marginTop="20dp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/book_author_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_enter_book_author"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_book"
        android:textSize="@dimen/input_new_book" />

    <TextView android:id="@+id/book_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_book_category"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_book_title"
        android:layout_marginTop="20dp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/book_category_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/lbl_edit_book_category"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/hint_enter_book"
        android:textSize="@dimen/input_new_book" />

</LinearLayout>